fixed the footer menu on mobile

--- a/wp-content/themes/mojintranet/assets/css/src/modules/_footer.scss
+++ b/wp-content/themes/mojintranet/assets/css/src/modules/_footer.scss
@@ -46,6 +46,10 @@
       .menu {
         text-align: center;
       }
+
+      li {
+        display: inline-block;
+      }
     }
 
     .copyright-container {
